syntax = "proto2";

import "google/protobuf/any.proto";

package tensorflow.core.function.trace_type.serialization;

// Represents an intermediary representation of a Serializable TraceType.
message SerializedTraceType {
  optional google.protobuf.Any representation = 1;
}
